--- a/quarto/ODEs/odes.qmd
+++ b/quarto/ODEs/odes.qmd
@@ -148,7 +148,7 @@ $$
 U'(t) = -r U(t), \quad U(0) = U_0.
 $$
 
-This shows that the rate of change of $U$ depends on $U$. Large postive values indicate a negative rate of change - a push back towards the origin, and large negative values of $U$ indicate a positive rate of change - again, a push back towards the origin. We shouldn't be surprised to either see a steady decay towards the origin, or oscillations about the origin.
+This shows that the rate of change of $U$ depends on $U$. Large positive values indicate a negative rate of change - a push back towards the origin, and large negative values of $U$ indicate a positive rate of change - again, a push back towards the origin. We shouldn't be surprised to either see a steady decay towards the origin, or oscillations about the origin.
 
 
 What will we find? This equation is different from the previous two equations, as the function $U$ appears on both sides. However, we can rearrange to get:
@@ -678,7 +678,7 @@ We now attempt to solve these.
 
 
 ```{julia}
-@syms alpha::real, γ::postive, v()
+@syms alpha::real, γ::positive, v()
 @syms x_0::real y_0::real v_0::real
 
 eq₁ = Dₜ(Dₜ(u))(t) ~    - γ * Dₜ(u)(t)
