--- a/quarto/alternatives/makie_plotting.qmd
+++ b/quarto/alternatives/makie_plotting.qmd
@@ -111,7 +111,7 @@ These then can be plotted directly:
 scatter(pts)
 ```
 
-The ploting of points in three dimesions is essentially the same, save the use of `Point3` instead of `Point2`.
+The plotting of points in three dimensions is essentially the same, save the use of `Point3` instead of `Point2`.
 
 
 ```{julia}
