--- a/quarto/alternatives/symbolics.qmd
+++ b/quarto/alternatives/symbolics.qmd
@@ -615,7 +615,7 @@ and
 norm(collect(v))
 ```
 
-Matrix multiplication is also deferred, but the size compatability of the matrices and vectors is considered immediately:
+Matrix multiplication is also deferred, but the size compatibility of the matrices and vectors is considered immediately:
 
 
 ```{julia}
