--- a/quarto/derivatives/curve_sketching.qmd
+++ b/quarto/derivatives/curve_sketching.qmd
@@ -100,7 +100,7 @@ We can easily make a graph of a function over a specified interval. What is not 
 Produce a graph of the function $f(x) = x^4 -13x^3 + 56x^2-92x + 48$.
 
 
-We identify this as a fourth-degree polynomial with postive leading coefficient. Hence it will eventually look $U$-shaped. If we graph over a too-wide interval, that is all we will see. Rather, we do some work to produce a graph that shows the zeros, peaks, and valleys of $f(x)$. To do so, we need to know the extent of the zeros. We can try some theory, but instead we just guess and if that fails, will work harder:
+We identify this as a fourth-degree polynomial with positive leading coefficient. Hence it will eventually look $U$-shaped. If we graph over a too-wide interval, that is all we will see. Rather, we do some work to produce a graph that shows the zeros, peaks, and valleys of $f(x)$. To do so, we need to know the extent of the zeros. We can try some theory, but instead we just guess and if that fails, will work harder:
 
 
 ```{julia}
@@ -351,7 +351,7 @@ Consider the function $p(x) = x + 2x^3 + 3x^3 + 4x^4 + 5x^5 +6x^6$. Which interv
 choices = ["``(-5,5)``, the default bounds of a calculator",
 "``(-3.5, 3.5)``, the bounds given by Cauchy for the real roots of ``p``",
 "``(-1, 1)``, as many special polynomials have their roots in this interval",
-"``(-1.1, .25)``, as this constains all the roots, the critical points, and inflection points and just a bit more"
+"``(-1.1, .25)``, as this contains all the roots, the critical points, and inflection points and just a bit more"
 ]
 radioq(choices, 4, keep_order=true)
 ```
@@ -577,7 +577,7 @@ Why should asymptotics matter?
 #| hold: true
 #| echo: false
 choices = [
-L"A vertical asymptote can distory the $y$ range, so it is important to avoid too-large values",
+L"A vertical asymptote can distort the $y$ range, so it is important to avoid too-large values",
 L"A horizontal asymptote must be plotted from $-\infty$ to $\infty$",
 "A slant asymptote must be plotted over a very wide domain so that it can be identified."
 ]
