--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -1278,7 +1278,7 @@ Consider the graph of the `airyai` function (from `SpecialFunctions`) over $[-5,
 plot(airyai, -5, 5)
 ```
 
-At $x = -2.5$  the derivative is postive or negative?
+At $x = -2.5$  the derivative is positive or negative?
 
 
 ```{julia}
@@ -1289,7 +1289,7 @@ answ = 1
 radioq(choices, answ, keep_order=true)
 ```
 
-At $x=0$ the derivative is postive or negative?
+At $x=0$ the derivative is positive or negative?
 
 
 ```{julia}
@@ -1300,7 +1300,7 @@ answ = 2
 radioq(choices, answ, keep_order=true)
 ```
 
-At $x = 2.5$  the derivative is postive or negative?
+At $x = 2.5$  the derivative is positive or negative?
 
 
 ```{julia}
