--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -124,7 +124,7 @@ plotif(f, f', -2, 2)
 When a function changes from increasing to decreasing, or decreasing to increasing, it will have a peak or a valley. More formally, such points are relative extrema.
 
 
-When discussing the mean value thereom, we defined *relative extrema* :
+When discussing the mean value theorem, we defined *relative extrema* :
 
 
 >   * The function $f(x)$ has a *relative  maximum* at $c$ if the value $f(c)$ is an *absolute maximum* for some *open* interval containing $c$.
@@ -264,9 +264,9 @@ Such values are often summarized graphically on a number line using a *sign char
 Reading this we have:
 
 
-  * the derivative changes sign from negative to postive at $x=-1$, so $g(x)$ will have a relative minimum.
+  * the derivative changes sign from negative to positive at $x=-1$, so $g(x)$ will have a relative minimum.
   * the derivative changes sign from positive to negative at $x=0$, so $g(x)$ will have a relative maximum.
-  * the derivative changes sign from negative to postive at $x=1$, so $g(x)$ will have a relative minimum.
+  * the derivative changes sign from negative to positive at $x=1$, so $g(x)$ will have a relative minimum.
 
 
 In the `CalculusWithJulia` package there is  `sign_chart` function that will do such work for us, though with a different display:
