--- a/quarto/derivatives/mean_value_theorem.qmd
+++ b/quarto/derivatives/mean_value_theorem.qmd
@@ -354,7 +354,8 @@ That is the function $f(x)$, minus the secant line between $(a,f(a))$ and $(b, f
 #The polynomial function interpolates  the points ``A``,``B``,``C``, and ``D``.
 #Adjusting these creates different functions. Regardless of the
 #function -- which as a polynomial will always be continuous and
-#differentiable -- the slope of the secant line between ``A`` and ``B`` is alway#s matched by **some** tangent line between the points ``A`` and ``B``.
+#differentiable -- the slope of the secant line between ``A`` and ``B`` is
+#always matched by **some** tangent line between the points ``A`` and ``B``.
 #"""
 #JSXGraph(:derivatives, "mean-value.js", caption)
 nothing
