--- a/quarto/derivatives/newtons_method.qmd
+++ b/quarto/derivatives/newtons_method.qmd
@@ -758,7 +758,7 @@ ImageFile(imgfile, caption)
 # {{{newtons_method_flat}}}
 caption = L"""
 
-Illustration of Newton's method failing to coverge as for some $x_i$,
+Illustration of Newton's method failing to converge as for some $x_i$,
 $f'(x_i)$ is too close to ``0``. In this instance after a few steps, the
 algorithm just cycles around the local minimum near $0.66$. The values
 of $x_i$ repeat in the pattern: $1.0002, 0.7503, -0.0833, 1.0002,
@@ -1105,7 +1105,7 @@ If $x_0$ is $1$ what occurs?
 nm_choices = [
 "The algorithm converges very quickly. A good initial point was chosen.",
 "The algorithm converges, but slowly. The initial point is close enough to the answer to ensure decreasing errors.",
-"The algrithm fails to converge, as it cycles about"
+"The algorithm fails to converge, as it cycles about"
 ]
 radioq(nm_choices, 1, keep_order=true)
 ```
