--- a/quarto/differentiable_vector_calculus/vector_fields.qmd
+++ b/quarto/differentiable_vector_calculus/vector_fields.qmd
@@ -178,7 +178,7 @@ Instead of the comprehension, broadcasting can be used
 surface(X.(thetas, phis'), Y.(thetas, phis'), Z.(thetas, phis'))
 ```
 
-If the parameterization is presented as a function, broadcasting can be used to succintly plot
+If the parameterization is presented as a function, broadcasting can be used to succinctly plot
 
 
 ```{julia}
