--- a/quarto/differentiable_vector_calculus/vectors.qmd
+++ b/quarto/differentiable_vector_calculus/vectors.qmd
@@ -564,7 +564,7 @@ Vectors are defined similarly. As they are identified with *column* vectors, we 
 𝒷 = [10, 11, 12]   # not 𝒷 = [10 11 12], which would be a row vector.
 ```
 
-In `Julia`, entries in a matrix (or a vector) are stored in a container with a type wide enough accomodate each entry. In this example, the type is SymPy's `Sym` type:
+In `Julia`, entries in a matrix (or a vector) are stored in a container with a type wide enough accommodate each entry. In this example, the type is SymPy's `Sym` type:
 
 
 ```{julia}
