--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -761,7 +761,7 @@ This comes from solving the projectile motion equations with a drag force *propo
 
 ```{julia}
 #| hold: true
-@syms gₑ::postive, k::postive, v₀::positive, θ::postive, x::postive
+@syms gₑ::positive, k::positive, v₀::positive, θ::positive, x::positive
 ex = (gₑ/(k*v₀*cos(θ)) + tan(θ))*x + gₑ/k^2 * log(1 - k/(v₀*cos(θ))*x)
 diff(ex, x, x), diff(ex, x, x, x,)
 ```
