--- a/quarto/integrals/area_between_curves.qmd
+++ b/quarto/integrals/area_between_curves.qmd
@@ -824,11 +824,11 @@ Doubling the answer above gives a value that Galileo had struggled with for many
 #| echo: false
 imgfile="figures/companion-curve-bisects-rectangle.png"
 caption = """
-Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is `2pi`.
+Roberval, avoiding a trigonometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is `2pi`.
 """
 # ImageFile(:integrals, imgfile, caption)
 nothing
 ```
 
-![Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is $2\pi$.
+![Roberval, avoiding a trignoometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is $2\pi$.
 ](./figures/companion-curve-bisects-rectangle.png)
