--- a/quarto/integrals/center_of_mass.qmd
+++ b/quarto/integrals/center_of_mass.qmd
@@ -63,7 +63,7 @@ $$
 Writing $w_i = m_i / (m_1 + m_2 + \cdots + m_n)$, we get the center of mass is just a weighted sum: $w_1 x_1 + \cdots + w_n x_n$, where the $w_i$ are the relative weights.
 
 
-With some rearrangment, we can see that the center of mass satisfies the equation:
+With some rearrangement, we can see that the center of mass satisfies the equation:
 
 
 $$
