--- a/quarto/integrals/mean_value_theorem.qmd
+++ b/quarto/integrals/mean_value_theorem.qmd
@@ -29,7 +29,7 @@ $$
 \frac{1}{b-a} \int_a^b f(x) dx.
 $$
 
-If $f$ is a constant, this is just the contant value, as would be expected. If $f$ is *piecewise* linear, then this is the weighted average of these constants.
+If $f$ is a constant, this is just the constant value, as would be expected. If $f$ is *piecewise* linear, then this is the weighted average of these constants.
 
 
 #### Examples
