--- a/quarto/integrals/volumes_slice.qmd
+++ b/quarto/integrals/volumes_slice.qmd
@@ -242,17 +242,17 @@ cone = integrate(pi*R^2, (y, 0, h))
 It is not unusual to parameterize a cone by the angle $\theta$ it makes and the height. Since $r/h=\tan\theta$, this gives the formula $V = \pi/3\cdot h^3\tan(\theta)^2$.
 
 
-The frustum of a cone is simply viewed as a cone with its top cut off. If the original height would have been $h_0$ and the actual height $h_1$, then the volume remaining is just $\int_0^{h_1}  \pi r(y)^2 dy$. We can see the formula for the frustrum of the right cone:
+The frustum of a cone is simply viewed as a cone with its top cut off. If the original height would have been $h_0$ and the actual height $h_1$, then the volume remaining is just $\int_0^{h_1}  \pi r(y)^2 dy$. We can see the formula for the frustum of the right cone:
 
 ```{julia}
 @syms h0
-frustrum = integrate(pi*R^2, (y, 0, h0))
+frustum = integrate(pi*R^2, (y, 0, h0))
 ```
 
 Simplifying, we can see this volume can be expressed using the ratio $(h_0/h_1)$:
 
 ```{julia}
-frustrum - cone * ( 3h0/h - 3(h0/h)^2 + (h0/h)^3) |> simplify
+frustum - cone * ( 3h0/h - 3(h0/h)^2 + (h0/h)^3) |> simplify
 ```
 
 
