--- a/quarto/limits/continuity.qmd
+++ b/quarto/limits/continuity.qmd
@@ -73,7 +73,7 @@ This speaks to continuity at a point, we can extend this to continuity over an i
 
 
 
-Finally, as with limits, it can be convenient to speak of *right* continuity and *left* continuity at a point, where the limit in the defintion is replaced by a right or left limit, as appropriate.
+Finally, as with limits, it can be convenient to speak of *right* continuity and *left* continuity at a point, where the limit in the definition is replaced by a right or left limit, as appropriate.
 
 
 :::{.callout-warning}
