--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -235,7 +235,7 @@ annotate!([(0,0+Δ,"A"), (x-Δ,y+Δ/4, "B"), (1+Δ/2,y/x, "C"),
 annotate!([(.2*cos(θ/2), 0.2*sin(θ/2), "θ")])
 imgfile = tempname() * ".png"
 savefig(p, imgfile)
-caption = "Triangle  ABD has less area than the shaded wedge, which has less area than triangle ACD. Their respective areas are ``(1/2)\\sin(\\theta)``, ``(1/2)\\theta``, and ``(1/2)\\tan(\\theta)``. The inequality used to show ``\\sin(x)/x`` is bounded below by ``\\cos(x)`` and above by ``1`` comes from a division by ``(1/2) \\sin(x)`` and taking reciprocals.
+caption = "Triangle ``ABD` has less area than the shaded wedge, which has less area than triangle ``ACD``. Their respective areas are ``(1/2)\\sin(\\theta)``, ``(1/2)\\theta``, and ``(1/2)\\tan(\\theta)``. The inequality used to show ``\\sin(x)/x`` is bounded below by ``\\cos(x)`` and above by ``1`` comes from a division by ``(1/2) \\sin(x)`` and taking reciprocals.
 "
 ImageFile(imgfile, caption)
 ```
@@ -1666,7 +1666,7 @@ Should `SymPy` have needed an assumption like
 
 
 ```{julia}
-@syms a::postive
+@syms a::positive
 ```
 
 ```{julia}
