--- a/quarto/limits/limits_extensions.qmd
+++ b/quarto/limits/limits_extensions.qmd
@@ -103,7 +103,7 @@ Let's loosen up the language in the definition of a limit to read:
 The $\epsilon-\delta$ definition has $V = (L-\epsilon, L + \epsilon)$ and $U=(c-\delta, c+\delta)$. This is a rewriting of $L-\epsilon < f(x) < L + \epsilon$ as $|f(x) - L| < \epsilon$.
 
 
-Now for the defintion:
+Now for the definition:
 
 
 > A function $f(x)$ has a limit on the right of $c$, written $\lim_{x  \rightarrow c+}f(x) = L$ if for every $\epsilon > 0$, there exists a  $\delta > 0$ such that whenever $0 < x - c < \delta$ it holds that  $|f(x) - L| < \epsilon$. That is, $U$ is $(c, c+\delta)$
@@ -573,7 +573,7 @@ fx, gx = exp(x^2), exp(x)^2
 limit(gx^n / fx, x => oo)
 ```
 
-A negative test for compatability is the following: if
+A negative test for compatibility is the following: if
 
 
 $$
