--- a/quarto/misc/getting_started_with_julia.qmd
+++ b/quarto/misc/getting_started_with_julia.qmd
@@ -19,10 +19,10 @@ As it is open source, indeed with a liberal MIT license, it can be installed for
 ## Running Julia through the web
 
 
-There are a few services for running `Julia` through the web. Mentioned here is [Binder](https://mybinder.org), which provides a web-based interface to `Julia` built around `Jupyter`.  `Jupyter` is a wildly succesful platform for interacting with different open-source software programs.
+There are a few services for running `Julia` through the web. Mentioned here is [Binder](https://mybinder.org), which provides a web-based interface to `Julia` built around `Jupyter`.  `Jupyter` is a wildly successful platform for interacting with different open-source software programs.
 
 
-[lauch binder](https://mybinder.org/v2/gh/CalculusWithJulia/CwJScratchPad.git/master)
+[launch binder](https://mybinder.org/v2/gh/CalculusWithJulia/CwJScratchPad.git/master)
 
 
 Clicking the launch link above will open a web page which provides a blank notebook, save for a package used by these notes. However, `Binder` is nowhere near as reliable as a local installation.
