--- a/quarto/misc/toc.qmd
+++ b/quarto/misc/toc.qmd
@@ -15,7 +15,7 @@ CalculusWithJulia.WeaveSupport.HTMLoutput(txt)
 # Calculus with Julia
 
 
-`CalculusWithJulia.jl` is a package for a set of notes for learning [calculus](http://en.wikipedia.org/wiki/Calculus) using the `Julia` languge. The package contains some support functions and the files that generate the notes being read now.
+`CalculusWithJulia.jl` is a package for a set of notes for learning [calculus](http://en.wikipedia.org/wiki/Calculus) using the `Julia` language. The package contains some support functions and the files that generate the notes being read now.
 
 
 Since the mid 90s there has been a push to teach calculus using many different points of view. The [Harvard](http://www.math.harvard.edu/~knill/pedagogy/harvardcalculus/) style rule of four says that as much as possible the conversation should include a graphical, numerical, algebraic, and verbal component. These notes use the programming language [Julia](http://julialang.org) to illustrate the graphical, numerical, and, at times, the algebraic aspects of calculus.
@@ -54,7 +54,7 @@ Julia can be used through the internet for free using the [mybinder.org](https:/
 Many of the necessary computational skills needed for employing `Julia` successfully to assist in learning calculus are in direct analogy to concepts of mathematics that are first introduced in precalculus or prior. This precalculus *review*, covers some of the basic materials mathematically (though not systematically). More importantly it illustrates the key computational mechanics we will use throughout.
 
 
-A quick rundown of the `Julia` concepts presented in this setion is in a [Julia overview](precalc/julia_overview.html).
+A quick rundown of the `Julia` concepts presented in this section is in a [Julia overview](precalc/julia_overview.html).
 
 
 ### Number systems
@@ -301,7 +301,7 @@ We begin with the generalization of the Riemann integral to compute area to the 
   * [Double and triple integrals](integral_vector_calculus/double_triple_integrals.html)
 
 
-Line and surface integrals are computed by 1- and 2-dimensional integrals, but offer new interpretations, espcially when vector fields are considered.
+Line and surface integrals are computed by 1- and 2-dimensional integrals, but offer new interpretations, especially when vector fields are considered.
 
 
   * [Line and surface integrals](integral_vector_calculus/line_integrals.html)
@@ -369,5 +369,3 @@ This is a work in progress. To report an issue, make a comment, or suggest somet
 
 
 To make edits to the documents directly, a pull request with the modified `*.jmd` files in the `CwJ` directory should be made. Minor edits to the `*.jmd` files should be possible through the GitHub web interface. In the footer of each page a pencil icon accompanying "suggest an edit" when clicked should cause the opening of the corresponding `*.jmd` file on GitHub for suggesting modifications. The html files will be generated independently, that need not be done.
-
-
