--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -400,7 +400,7 @@ Mathematically these are irrational values with decimal expansions that do not r
 
 :::{.callout-warning}
 ## Warning
-In most cases. There are occasional (basically rare) spots where using `pi` by itself causes an eror where `1*pi` will not. The reason is `1*pi` will create a floating point value from the irrational object, `pi`.
+In most cases. There are occasional (basically rare) spots where using `pi` by itself causes an error where `1*pi` will not. The reason is `1*pi` will create a floating point value from the irrational object, `pi`.
 
 :::
 
@@ -763,7 +763,7 @@ numericq(val)
 ###### Question
 
 
-Wich of the following is a valid `Julia` expression for
+Which of the following is a valid `Julia` expression for
 
 
 $$
@@ -1132,7 +1132,7 @@ Attempting to compute this, we have:
 ```{julia}
 c = 299_792_458;  # the speed of light
 G = 6.67430e-11;  # Gravitational constant
-h = 6.62607015e-34;  # Planck's contant
+h = 6.62607015e-34;  # Planck's constant
 h_bar = h / (2*pi);
 planck_length = sqrt(h_bar * G / c^3)
 ```
