--- a/quarto/precalc/trig_functions.qmd
+++ b/quarto/precalc/trig_functions.qmd
@@ -600,7 +600,7 @@ We can simplify a few: For example, when $n=0$ we see immediately that $T_0(x) =
 A few things become clear from the above two representations:
 
 
-  * Starting from $T_0(x) = 1$ and $T_1(x)=x$ and using the recursive defintion of $T_{n+1}$ we get a family of polynomials where $T_n(x)$ is a degree $n$ polynomial. These are defined for all $x$, not just $-1 \leq x \leq 1$.
+  * Starting from $T_0(x) = 1$ and $T_1(x)=x$ and using the recursive definition of $T_{n+1}$ we get a family of polynomials where $T_n(x)$ is a degree $n$ polynomial. These are defined for all $x$, not just $-1 \leq x \leq 1$.
   * Using the initial definition, we see that the zeros of $T_n(x)$ all occur within $[-1,1]$ and happen when $n\arccos(x) = k\pi + \pi/2$, or $x=\cos((2k+1)/n \cdot \pi/2)$ for $k=0, 1, \dots, n-1$.
 
 
@@ -717,7 +717,7 @@ radioq(choices, answ, keep_order=true)
 ###### Question
 
 
-The cosine function is a simple tranformation of the sine function. Which one?
+The cosine function is a simple transformation of the sine function. Which one?
 
 
 ```{julia}
@@ -787,7 +787,7 @@ numericq(val)
 ###### Question
 
 
-For any postive integer $n$ the equation $\cos(x) - nx = 0$ has a solution in $[0, \pi/2]$. Graphically estimate the value when $n=10$.
+For any positive integer $n$ the equation $\cos(x) - nx = 0$ has a solution in $[0, \pi/2]$. Graphically estimate the value when $n=10$.
 
 
 ```{julia}
