--- a/quarto/misc/julia_interfaces.qmd
+++ b/quarto/misc/julia_interfaces.qmd
@@ -83,7 +83,7 @@ Pluto has a built-in package management system that manages the installation of 
 The Jupyter Project provides two web-based interfaces to `Julia`: the Jupyter notebook and the newer JupyterLab. The [binder](https://mybinder.org/) project use Juptyer notebooks for their primary interface to `Julia`. To use a binder notebook, follow this link:
 
 
-[lauch binder](https://mybinder.org/v2/gh/CalculusWithJulia/CwJScratchPad.git/master)
+[launch binder](https://mybinder.org/v2/gh/CalculusWithJulia/CwJScratchPad.git/master)
 
 
 To run locally, these interfaces are available once `IJulia` is installed. Since version 1.7, the following commands should do this:
@@ -120,7 +120,7 @@ When a cell is evaluating, the leading `[]` has an asterick (`[*]`) showing the 
 Once a cell is evaluated, the leading `[]` has a number inserted (e.g., `[1]`, as in the figure). This number indicates the order of cell evaluation. Once a notebook is interacted with, the state of the namespace need not reflect the top-to-bottom order of the notebook, but rather reflects the order of cell evaluations.
 
 
-To be specific, a variable like `x` may be redefined in a cell above where the variable is intially defined and this redefinition will hold the current value known to the interpreter. As well, a notebook, when reloaded, may have unevaluated cells with output showing. These will not influence the state of the kernel until they are evaluated.
+To be specific, a variable like `x` may be redefined in a cell above where the variable is initially defined and this redefinition will hold the current value known to the interpreter. As well, a notebook, when reloaded, may have unevaluated cells with output showing. These will not influence the state of the kernel until they are evaluated.
 
 
 When a cell's commands are evaluated, the last command executed is displayed. If it is desirable that multiple values be displayed, they can be packed into a tuple. This is done by using commas to separate values. `IJulia` will also display other means to print output (e.g., `@show`, `display`, `print`, ...).
@@ -132,7 +132,7 @@ To run all cells in a notebook from top to bottom, the "run all" command under t
 If a calculation takes much longer than anticipated, the "kernel" can be interrupted through a menu item of "Kernel".
 
 
-If the kernal appears unresponsive, it can be restarted through  a menu item of "Kernel".
+If the kernel appears unresponsive, it can be restarted through  a menu item of "Kernel".
 
 
 Notebooks can be saved (as `*.ipynb` files) for sharing or for reuse. Notebooks can be printed at HTML pages, and if the proper underlying software is available, as formatted pages.
