--- a/quarto/precalc/polynomial.qmd
+++ b/quarto/precalc/polynomial.qmd
@@ -137,7 +137,7 @@ When `SymPy` is installed through the package manager, the underlying `Python` l
 
 :::{.callout-note}
 ## Note
-The [`Symbolics`](../alternatives/symbolics) package is a rapidly developing `Julia`-only packge that provides symbolic math options.
+The [`Symbolics`](../alternatives/symbolics) package is a rapidly developing `Julia`-only package that provides symbolic math options.
 
 :::
 
